--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crickets-corner",
+  "name": "package",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:crickets_corner": "node dist/crickets_corner/server/server.mjs",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-eslint": "18.4.0",
+    "eslint": "^9.13.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -41,6 +44,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.3.3",
-    "typescript": "~5.5.2"
-  }
+    "typescript": "~5.5.2",
+    "typescript-eslint": "8.10.0"
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 18.2.11.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
