--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
@@ -24,6 +25,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
     "express": "^4.18.2",
+    "firebase": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
